Notificaciones push implementadas con ionic-cloud

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,12 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- ionic cloud js-->
+    <script type="text/javascript" src="lib/ionic.cloud.min.js"></script>
+
+    <!-- bluebird para compatibilidad de promise para android <4.4.4 y iOS <8-->
+    <script type="text/javascript" src="lib/bluebird.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
